<resources>
    <string name="app_name">Funny Sounds</string>
    <string name="english">English</string>
    <string name="Urdu">Urdu</string>
    <string name="Arabic">Arabic</string>
    <string name="Spanish">Spanish</string>
    <string name="Turkish">Turkish</string>
    <string name="French">French</string>
    <string name="Russian">Russian</string>
    <string name="Hindi">Hindi</string>
    <string name="Greek">Greek</string>
    <string name="Portugesse">Portuguese</string>
    <string name="done">Done</string>
    <string name="choose_language">Choose Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_setting_fragment">hello_setting_fragment</string>
    <string name="hello_prank_fragment">hello_prank_fragment</string>
    <string name="hello_nigerian_fragment">hello_nigerian_fragment</string>
    <string name="hello_favourite_fragment">hello_favourite_fragment</string>
    <string name="Settings">Settings</string>
    <string name="more_app">More App</string>
    <string name="rate_me">Rate ME</string>
    <string name="share_app">Share App</string>
    <string name="offline_notification_text">Share offline_notification_text</string>

    <string name="privacy_poliecy">Privacy Poliecy</string>
    <string name="popular_courses">popular_courses</string>
    <string name="favourite_sounds">Favourite Sounds</string>
    <string name="nigerian_sounds">Nigerian Sounds</string>
    <string name="prank_sounds">Prank Sounds</string>
    <string name="Language">Language</string>
    <string name="play">Play</string>
    <string name="WrongAnswer">Wrong Answer</string>
    <string name="ToyDuck">Toy Duck</string>
    <string name="Swoosh">Swoosh</string>
    <string name="Speechless">Speechless</string>
    <string name="Slap">Slap</string>
    <string name="Shoot">Shoot</string>
    <string name="Record_Scratch_2">Record Scratch 2</string>
    <string name="Record_Scratch_1">Record Scratch 1</string>
    <string name="Rocket_Effect">Rocket Effect</string>
    <string name="The_Earlier_We_Realise_This">The Earlier We Realise This</string>
    <string name="Mental_Gear_Alert">Mental Gear Alert</string>
    <string name="Screaming">Screaming</string>
    <string name="Fail_1">Fail 1</string>
    <string name="Fail_2">Fail 2</string>
    <string name="Drum_Roll">Drum Roll</string>
    <string name="Laughing">Laughing</string>
    <string name="Funny_Sounds">Funny Sounds</string>
    <string name="Fart">Fart</string>
    <string name="Bass_Boosted">Bass Boosted</string>
    <string name="Are_You_Serious">Are You Serious</string>
    <string name="Falling">Falling</string>
    <string name="Drop">Drop</string>
    <string name="Door_Knocking">Door Knocking</string>
    <string name="Anime_Wow">Anime Wow</string>
    <string name="Funny_Laugh">Funny Laugh</string>
    <string name="Most_Used_Effect_1">Most Used Effect 1</string>
    <string name="Most_Used_Effect_2">Most Used Effect 2</string>
    <string name="Most_Used_Effect_3">Most Used Effect 3</string>
    <string name="Most_Used_Effect_4">Most Used Effect 4</string>
    <string name="You_Will_End_Up_In_Mcdonald">You Will End Up In Mcdonald</string>
    <string name="You_Can_Be_Prosecuted">You Can Be Prosecuted</string>
    <string name="Funny_1">Funny 1</string>
    <string name="Funny_2">Funny 2</string>
    <string name="Funny_3">Funny 3</string>
    <string name="Funny_4">Funny 4</string>
    <string name="Funny_5">Funny 5</string>
    <string name="Car_Horn">Car Horn</string>
    <string name="Car_Horn_2">Car Horn 2</string>
    <string name="Camera_Shutter">Camera Shutter</string>
    <string name="Alert">Alert</string>
    <string name="Suspense_1">Suspense 1</string>
    <string name="Suspense_2">Suspense 2</string>
    <string name="Suspense_3">Suspense 3</string>
    <string name="Punch_1">Punch 1</string>
    <string name="Punch_2">Punch 2</string>
    <string name="How_Many_Times_Will_They_Tell_You">How Many Times Will They Tell You</string>
    <string name="Fast_Rewind">Fast Rewind</string>
    <string name="Dun_Dun">Dun Dun</string>
    <string name="Apostle_Will_Hear_Of_This">Apostle Will Hear Of This</string>
    <string name="It_is_What_It_is">It is What It is</string>
    <string name="Nope">Nope</string>
    <string name="Movie">Movie</string>
    <string name="Our_Mumu_NO_Too_Much">Our Mumu NO Too Much</string>
    <string name="Something_About_To_Happen">Something About To Happen</string>
    <string name="Dancing_Funeral">Dancing Funeral</string>
    <string name="Sudden_Suspense">Sudden Suspense</string>
    <string name="You_Are_A_Failure">You Are A Failure</string>
    <string name="Rewind">Rewind</string>
    <string name="There_Is_God">There Is God</string>
    <string name="Why_Are_You_Running">Why Are You Running</string>
    <string name="You_Are_Mumu_Man">You Are Mumu Man</string>
    <string name="Investigations">Investigations</string>
    <string name="I_no_Dey_Hear_Word">I no Dey Hear Word</string>
    <string name="Broda_Shaggi">Broda Shaggi</string>
    <string name="Nollywood_Laugh">Nollywood Laugh</string>
    <string name="What_Is_Going_On">What Is Going On</string>
    <string name="Is_It_For_Eba">Is It For Eba</string>
    <string name="Help_Me">Help Me</string>
    <string name="What_Type_Of_Playing_Is_This">What Type Of Playing Is This</string>
    <string name="I_Want_Problem">I Want Problem</string>
    <string name="Murife_Dont_Run">Murife Dont Run</string>
    <string name="Just_Dey_Play">Just Dey Play</string>
    <string name="Wetin_Be_This">Wetin Be This</string>
    <string name="play_sound">Play Sound</string>
    <string name="click_here_to_play">Click Here To Play</string>
    <string name="tap_to_play">Tap to Play</string>
    <string name="tap_to_pause">Tap to Pause</string>

    <string name="Animals">Animals</string>
    <string name="Cough">Cough</string>
    <string name="Christmas">Christmas</string>
    <string name="Police_Siren">Police Siren</string>
    <string name="Baby_Laugh">Baby Laugh</string>
    <string name="Notifications">Notifications</string>
    <string name="Door_Bell">Door Bell</string>
    <string name="Baby_Cry">Baby Cry</string>
    <string name="Gun">Gun</string>
    <string name="Hair_Cut">Hair Cut</string>
    <string name="Dog">Dog</string>
    <string name="Shout">Shout</string>
    <string name="Cat">Cat</string>
    <string name="Burp">Burp</string>
    <string name="Air_Horn">Air Horn</string>
    <string name="Zombie">Zombie</string>
    <string name="Toilet_Flush">Toilet Flush</string>
    <string name="Snoring">Snoring</string>
    <string name="Sneeze">Sneeze</string>
    <string name="Shirt_Tear">Shirt Tear</string>
    <string name="Car">Car</string>
    <string name="Scissor">Scissor</string>
    <string name="Scary">Scary</string>
    <string name="Plate_Break">Plate Break</string>
    <string name="Meme">Meme</string>
    <string name="Halloween">Halloween</string>
    <string name="choose_category">Choose Category</string>
    <string name="sound1">Sound 1</string>
    <string name="sound2">Sound 2</string>
    <string name="sound3">Sound 3</string>
    <string name="sound4">Sound 4</string>
    <string name="sound5">Sound 5</string>
    <string name="sound6">Sound 6</string>
    <string name="sound7">Sound 7</string>
    <string name="sound8">Sound 8</string>
    <string name="sound9">Sound 9</string>
    <string name="sound10">Sound 10</string>
    <string name="sound11">Sound 11</string>
    <string name="download">Download</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="add_to_favourites">Add TO Favourite</string>
    //Admob TEST ADS
<!--    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="bannerExit">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="intersitialSplash">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="intersitialMain">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="appopen_ad">ca-app-pub-3940256099942544/3419835294</string>-->
<!--    <string name="facebook_app_id">123</string>-->
<!--    <string name="native_ad">ca-app-pub-3940256099942544/2247696110</string>-->
<!--    <string name="funny_sounds">Funny Sounds</string>-->

    //real ads
    <string name="app_id">ca-app-pub-7787954900414753~1333654897</string>
    <string name="banner">ca-app-pub-7787954900414753/9854308599</string>
    <string name="bannerExit">ca-app-pub-7787954900414753/9854308599</string>-->
    <string name="intersitialSplash">ca-app-pub-7787954900414753/5097300777</string>
    <string name="intersitialMain">ca-app-pub-7787954900414753/3784219106</string>
    <string name="appopen_ad">ca-app-pub-7787954900414753/7847092352</string>
    <string name="facebook_app_id">123</string>
    <string name="native_ad">ca-app-pub-7787954900414753/9327694983</string>
    <string name="funny_sounds">Funny Sounds</string>
</resources>