<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingFragment">

    <TextView
        android:id="@+id/maintext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/moreappcard"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/maintext"
        android:layout_margin="20dp"
        android:elevation="8dp"
        android:visibility="visible"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fontimg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/moreapp">

            </ImageView>

            <ImageView
                android:id="@+id/next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/next">

            </ImageView>

            <TextView
                android:id="@+id/Moreapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/next"
                android:layout_toEndOf="@+id/fontimg"
                android:text="@string/more_app"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/RateMe"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/moreappcard"
        android:layout_margin="20dp"
        android:elevation="8dp"
        android:visibility="visible"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/rateimg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/rate_24">

            </ImageView>

            <ImageView
                android:id="@+id/next1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/next">

            </ImageView>

            <TextView
                android:id="@+id/Rateus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/next1"
                android:layout_toEndOf="@+id/rateimg"
                android:text="@string/rate_me"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sharecard"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/RateMe"
        android:layout_margin="20dp"
        android:elevation="8dp"
        android:visibility="visible"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/shareimg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/shareapp">

            </ImageView>

            <ImageView
                android:id="@+id/next2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/next">

            </ImageView>

            <TextView
                android:id="@+id/Share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/next2"
                android:layout_toEndOf="@+id/shareimg"
                android:text="@string/share_app"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/privacycard"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/sharecard"
        android:layout_margin="20dp"
        android:elevation="8dp"
        android:visibility="visible"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/privacyimg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/privacy">

            </ImageView>

            <ImageView
                android:id="@+id/next3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/next">

            </ImageView>

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/next3"
                android:layout_toEndOf="@+id/privacyimg"
                android:text="@string/privacy_poliecy"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>